--- a/fast_furious.html
+++ b/fast_furious.html
@@ -10,6 +10,13 @@
     <header class="header">
         <h1>Films Fast & Furious</h1>
         
+            <main class="main-content">
+        <nav class="navbar">
+            <a href="zombieland.html">Zombieland</a>
+            <a href="deadpool.html">Fast & Furious</a>
+            <a href="ready_player_one.html">Ready Player One</a>
+        </nav>
+        
 
     <!-- Contenu principal des films -->
     <main class="main-content">
