--- a/deadpool.html
+++ b/deadpool.html
@@ -16,7 +16,7 @@
             <a href="fast_furious.html">Fast & Furious</a>
             <a href="ready_player_one.html">Ready Player One</a>
         </nav>
-
+    </headear>
         <section class="movies">
             <div class="card">
                 <h3>Deadpool 1</h3>
