--- a/zombieland.html
+++ b/zombieland.html
@@ -9,7 +9,6 @@
 <body>
     <header class="header">
         <h1>Films Deadpool</h1>
-    </header>
 
     <main class="main-content">
         <nav class="navbar">
@@ -17,6 +16,7 @@
             <a href="fast_furious.html">Fast & Furious</a>
             <a href="ready_player_one.html">Ready Player One</a>
         </nav>
+    </headear>
 
         <section class="movies">
             <div class="card">
