--- a/zombieland.html
+++ b/zombieland.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <h1>Films Deadpool</h1>
+        <h1>Films Zombieland</h1>
 
     <main class="main-content">
         <nav class="navbar">
