--- a/fast_furious.html
+++ b/fast_furious.html
@@ -8,14 +8,15 @@
 </head>
 <body>
     <header class="header">
-        <h1>Films Fast & Furious</h1>
-        
-            <main class="main-content">
+        <h1>Films Fast Furious</h1>
+
+    <main class="main-content">
         <nav class="navbar">
             <a href="zombieland.html">Zombieland</a>
-            <a href="deadpool.html">Fast & Furious</a>
+            <a href="fast_furious.html">Fast & Furious</a>
             <a href="ready_player_one.html">Ready Player One</a>
         </nav>
+    </headear>
         
 
     <!-- Contenu principal des films -->
