--- a/deadpool.html
+++ b/deadpool.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <h1>Films Deadpool</h1>
-    </headear>
+    </header> <!-- Correction de la balise de fermeture -->
     <main class="main-content">
         <nav class="navbar">
             <a href="zombieland.html">Zombieland</a>
@@ -32,7 +32,5 @@
             </div>
         </section>
     </main>
-
-
 </body>
 </html>
