--- a/zombieland.html
+++ b/zombieland.html
@@ -9,6 +9,7 @@
 <body>
     <header class="header">
         <h1>Films Zombieland</h1>
+    </header> <!-- Correction de la balise de fermeture -->
 
     <main class="main-content">
         <nav class="navbar">
@@ -16,24 +17,18 @@
             <a href="fast_furious.html">Fast & Furious</a>
             <a href="ready_player_one.html">Ready Player One</a>
         </nav>
-    </headear>
 
         <section class="movies">
             <div class="card">
-                <h3>zombieland 1</h3>
+                <h3>Zombieland 1</h3>
                 <iframe src="https://filemoon.sx/e/5jl1e314g71s" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
             <div class="card">
-                <h3>zombieland 2</h3>
+                <h3>Zombieland 2</h3>
                 <iframe src="https://filemoon.sx/e/rseofbz9438a" width="100%" height="200" scrolling="NO" allowfullscreen></iframe>
             </div>
         </section>
     </main>
 
-    <script>
-        function logout() {
-            window.location.href = 'index.html';
-        }
-    </script>
 </body>
 </html>
