--- a/fast_furious.html
+++ b/fast_furious.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header class="header">
-        <h1>Films Fast Furious</h1>
+        <h1>Films Fast & Furious</h1>
+    </header> <!-- Correction de la balise de fermeture -->
 
     <main class="main-content">
         <nav class="navbar">
@@ -16,11 +17,8 @@
             <a href="fast_furious.html">Fast & Furious</a>
             <a href="ready_player_one.html">Ready Player One</a>
         </nav>
-    </headear>
-        
 
-    <!-- Contenu principal des films -->
-    <main class="main-content">
+        <!-- Contenu principal des films -->
         <section class="movies" id="movie-list">
             <!-- Film 1 -->
             <div class="card">
