--- a/zombieland.html
+++ b/zombieland.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header class="header">
-        <h1>Films Zombieland</h1>
+        <h1>Films Fast & Furious</h1>
     </header> <!-- Correction de la balise de fermeture -->
 
     <main class="main-content">
         <nav class="navbar">
-            <a href="deadpool.html">Deadpool</a>
+            <a href="zombieland.html">Zombieland</a>
             <a href="fast_furious.html">Fast & Furious</a>
             <a href="ready_player_one.html">Ready Player One</a>
         </nav>
