--- a/deadpool.html
+++ b/deadpool.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header class="header">
-        <h1>Films Deadpool</h1>
+        <h1>Film deadpool</h1>
     </header> <!-- Correction de la balise de fermeture -->
+
     <main class="main-content">
         <nav class="navbar">
             <a href="zombieland.html">Zombieland</a>
