--- a/ready_player_one.html
+++ b/ready_player_one.html
@@ -9,9 +9,15 @@
 <body>
     <!-- En-tête avec le titre et bouton de déconnexion -->
     <header class="header">
-        <h1>Films Ready Player One</h1>
+        <h1>Film Zombieland</h1>
+    </header> <!-- Correction de la balise de fermeture -->
 
-    </header>
+    <main class="main-content">
+        <nav class="navbar">
+            <a href="deadpool.html">Deadpool</a>
+            <a href="fast_furious.html">Fast & Furious</a>
+            <a href="zombieland.html">Zombieland</a>
+        </nav>
 
 
     <!-- Contenu principal -->
