--- a/deadpool.html
+++ b/deadpool.html
@@ -16,7 +16,7 @@
             <a href="zombieland.html">Zombieland</a>
             <a href="fast_furious.html">Fast & Furious</a>
             <a href="ready_player_one.html">Ready Player One</a>
-            <a href="moi_moche_et_méchant.html">Moi_moche_et_méchant</a>
+            <a href="moi_moche_et_mechant.html">Moi moche et méchant</a>
         </nav>
 
         <section class="movies">
