--- a/ready_player_one.html
+++ b/ready_player_one.html
@@ -17,7 +17,7 @@
             <a href="deadpool.html">Deadpool</a>
             <a href="fast_furious.html">Fast & Furious</a>
             <a href="zombieland.html">Zombieland</a>
-            <a href="moi_moche_et_méchant.html">Moi_moche_et_méchant</a>
+            <a href="moi_moche_et_mechant.html">Moi moche et méchant</a>
 
         </nav>
 
